* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks

#### 0.8.6 (2010-04-??) ###############################

* CHANGE: Stella::Testplan#userid now used in digest calculation.
* ADDED: Stella::Testplan#userid
* ADDED: Stella.post


#### 0.8.5 (2010-03-27) ###############################

* FIXED: Add User-Agent header if Stella.agent is not null and one is not already provided
* FIXED: Client wait (undefined method '>' for Range error)
* CHANGE: Testrun#samples contains all data samples for each event in a given batch
* CHANGE: Renamed Testrun#events -> Testrun#event_probes
* ADDED: Testrun#logsize
* ADDED: Store HTTP status codes in Testrun#stats
* ADDED: Store error messages in Sample#errors
* ADDED: Stella.get now takes a block
* ADDED: Stella.agent


#### 0.8.4 (2010-03-19) ###############################

* FIXED: Misc issues getting and setting headers, params, and resources
* FIXED: There was no response body in Stella::Engine::Log objects
* CHANGE: Store URIs as strings in Stella::Engine::Log objects
* CHANGE: Stella::Data::HTTP now uses @header instead of @headers
* ADDED: Testrun#end_time, Testrun#running?
* ADDED: Testrun.elapsed_seconds
* ADDED: Testrun.granularity which replaces Load::ROTATE_TIMELINE


#### 0.8.3 (2010-03-15) ###############################

* FIXED: Testrun digest handling
* FIXED: Testrun.id will be converted to a Gibbler::Digest if it's a String. 
* FIXED: Reconstituting Testrun from a hash (samples and stats)
* CHANGE: Removed dashes from CLI params: notemplate, nostats, nowait, withheader, withparam
* CHANGE: Engine is now called via Testrun#run
* CHANGE: Use the ID attribute (e.g. Testplan.id) instead of digest or digest_cache (which only
  be used once to generate an ID 
* ADDED: Testrun#client_options